# GCloudVoiceTest

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/noteam/werewolves/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GCCallBack.cpp  GCCallBack.h  GCloudVoice.h  GCloudVoiceVersion.h  native-lib.cpp  native-lib.h
app/src/main/java/com/noteam/werewolves/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/noteam/werewolves/: ExampleUnitTest.java
